# Pico-CAN-BNO085

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  mcp2515.cpp  shtp.cpp
include/: mcp2515.h  shtp.h
